style: add more colors to variable

--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,9 @@
   --side-bar-bg: #fffdf8;
   --white: #ffffff;
   --grey: #666666;
+  --light-grey: #e4e4e4;
+  --lighter-grey: #f9f9f9;
   --orange: #f97b5c;
+  --peach: #ffe0d9;
+  --black: #282828;
 }
